@@ -1,11 +1,16 @@
 /*
- * $Id: ChangeLog,v 1.1095 2013-07-05 01:02:45 fyurisich Exp $
+ * $Id: ChangeLog,v 1.1096 2013-07-05 01:16:45 fyurisich Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2013-07-04 22:16 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
+   * include/oohg.h
+     * Fixed C compiler warnings when HB_* command are
+       already defined.
 
 2013-07-04 22:02 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
    * source/h_xbrowse.prg
